--- a/Index.html/css/Inicio.css
+++ b/Index.html/css/Inicio.css
@@ -1,27 +1,50 @@
-
 /* Estilos para la lista de navegación */
 .lista {
-    list-style: none;
+    list-style: none !important;
     justify-content: space-between;
-    padding: 10px; /* Añade espacio alrededor de la lista */
-    position: fixed; /* Fija la lista en la parte superior */
+    padding: 15px;
+    /* Añade espacio alrededor de la lista */
+    position: fixed;
+    /* Fija la lista en la parte superior */
     top: 0;
     left: 0;
     width: 100%;
-    color: yellow;
-
+    color: rgb(255, 208, 0);
+    font-family: fantasy;
+    background-color: #ffffff;
+    margin-top: auto;
+    border-bottom: 1px solid #000000;
+    box-sizing: border-box;
+ 
+    
 }
 
 .lista li {
     margin: 0 80px;
+    display: inline;
+}
+.logo-up img{
+    width: 50%;
 }
 
-/* Estilos para los botones */
-.lista li {
-    display: inline; /* Hace que los elementos de lista se muestren en línea */
+.logo-up{
+    max-width: 70%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: flex-end;
+}
+.lista li:hover {
+    background-color: black; /* Cambia el color de fondo al pasar el cursor */
+    padding: 10px; /* Añade un padding al elemento */
+    color: rgb(255, 208, 0); /* Cambia el color del texto al pasar el cursor */
+    transition: all 0.3s; /* Agrega una transición suave para una animación agradable */
+    border-radius: 6px;
 }
 
-.lista li a {
-    text-decoration: none; /* Quita la decoración de subrayado de los enlaces */
 
-}
+
+
+
+
+    
+
