--- a/Index.html/css/Registrarse.css
+++ b/Index.html/css/Registrarse.css
@@ -1,10 +1,14 @@
 body {
-    
-   
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: 0;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    height: 100vh; 
    
 }
+
+
 .form_register {
     font-style: italic;
     background-color: rgba(255, 196, 2, 0.8);
@@ -15,8 +19,19 @@ body {
     max-width: 255px;
     width: 100%;
     text-align: center;
+
     
 }
+.registro {
+    border-radius: 5px;
+    font-size: 1em;
+    padding: 5px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .background {
     background-size: cover;
     background-position: center center;
@@ -27,4 +42,12 @@ body {
     width: 100%;
     height: 100%;
     z-index: -1;
+}
+.botons {
+    text-align: center;
+border-radius: 10%;
+width: 50%;
+background-color: black;
+color: white;
+
 }
