--- a/Index.html/css/Inicio.css
+++ b/Index.html/css/Inicio.css
@@ -5,6 +5,17 @@ body {
     
 }
 
+.bars {
+    width: 30px; 
+    height: 30px;
+    margin: 5px;
+    
+}
+.bars:hover {
+    transform: scale(1.3);
+
+}
+
 .lista {
     list-style: none !important;
     justify-content: space-around;
@@ -58,11 +69,7 @@ p {
     margin-left: 10px;
 }
 
-.icono-perfil {
-    width: 40px;
-    display: block; 
-    margin: 0 auto;
-}
+
 
 footer {
     background-color: #e4e4e4;
@@ -73,13 +80,16 @@ footer {
     background-size: cover; 
     background-repeat: no-repeat; 
     background-position: center;
+
+    
 }
+
 
 
 @media (max-width: 767px) {
     .lista {
         flex-direction: column;
-        padding: 10px;
+        padding: 1px;
         text-align: center;
     }
 
@@ -99,12 +109,13 @@ footer ul {
 }
 
 
-.linea-menu {
+.linea-menu  {
     text-align: center;
 }
 
 .linea-menu hr {
     border: 1px solid black; 
+    
 }
 
 .menu-titulo {
@@ -132,6 +143,7 @@ footer ul {
     border: 1px solid #ccc; 
     padding: 20px;
     margin: 10px;
+    border-radius: 5px;
 }
 
 .menu-item h2 {
@@ -165,8 +177,9 @@ nav ul li a {
 }
 
 #nosotros {
-    background-color: #f4f4f4;  
+    background-color: #FDFDFD;
     padding: 20px;
+    border-radius: 5px;
 }
 
 #nosotros h2 {
@@ -176,7 +189,7 @@ nav ul li a {
 
 #nosotros p {
     font-size: 16px;
-    line-height: 1.4;
+    line-height: 1.1;
 }
 
 
@@ -186,7 +199,7 @@ nav ul li a {
     width: 40px; 
     height: 40px; 
     margin: 5px; 
-    transition: background-color 0.3s;
+    
 }
 
 
