--- a/Index.html/css/Inicio.css
+++ b/Index.html/css/Inicio.css
@@ -146,6 +146,17 @@ body {
     margin: 0 auto; 
 }
 
+@media screen and (max-width: 600px) {
+    
+    .hambu-img {
+        
+        max-width: 100%;
+        height: auto; 
+        box-sizing: border-box;
+        margin-top: 200px;
+    }
+}
+
 .imagen-texto {
     display: flex;
     flex-direction: column; 
